[ADD] Save functionality, Save key, Exit key [FIX] Balance changes, Slight refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,11 @@ add_executable(FMI_OOP_Semester_Proj
         src/Entity/Creature/Hero/Hero.cpp
         src/Map/LevelLoader/LevelLoader.cpp
         src/Map/LevelLoader/LevelLoader.hpp
+        src/Map/LevelLoader/LoadedLevel.hpp
+        src/Game/Save/SaveManager.cpp
+        src/Game/Save/SaveManager.hpp
+        src/Game/GameContext.hpp
+        src/GameAction.hpp
 )
 
 target_link_libraries(FMI_OOP_Semester_Proj PRIVATE nlohmann_json::nlohmann_json)
