--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(FMI_OOP_Semester_Proj)
 set(CMAKE_CXX_STANDARD 14)
 
 find_package(nlohmann_json REQUIRED)
+find_package(boost REQUIRED)
 
 add_executable(FMI_OOP_Semester_Proj
         src/main.cpp
@@ -49,6 +50,18 @@ add_executable(FMI_OOP_Semester_Proj
         src/Game/GameContext.hpp
 )
 
-
+add_executable(FMI_OOP_Semester_Proj_Level_Editor
+        editor/main.cpp
+        editor/MazeGenerator/MazeGenerator.cpp
+        editor/MazeGenerator/MazeGenerator.hpp
+        editor/Maze/Maze.hpp
+        editor/Maze/Maze.cpp
+        editor/Maze/CellState.hpp
+        editor/GameEditor/GameEditor.cpp
+        editor/GameEditor/GameEditor.hpp
+)
 
 target_link_libraries(FMI_OOP_Semester_Proj PRIVATE nlohmann_json::nlohmann_json)
+
+target_link_libraries(FMI_OOP_Semester_Proj_Level_Editor PRIVATE nlohmann_json::nlohmann_json)
+target_link_libraries(FMI_OOP_Semester_Proj_Level_Editor PRIVATE boost::boost)
