[ADD] Doxygen documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 14)
 
 find_package(nlohmann_json REQUIRED)
 find_package(boost REQUIRED)
+find_package(Doxygen QUIET)
 
 add_executable(FMI_OOP_Semester_Proj
         src/main.cpp
@@ -42,7 +43,7 @@ add_executable(FMI_OOP_Semester_Proj
         src/Entity/Creature/Hero/Hero.cpp
         src/Map/LevelLoader/LevelLoader.cpp
         src/Map/LevelLoader/LevelLoader.hpp
-        src/Map/LevelLoader/LoadedLevel.hpp
+        src/Map/LoadedLevel.hpp
         src/Game/Save/SaveManager.cpp
         src/Game/Save/SaveManager.hpp
         src/Game/GameContext.hpp
@@ -54,6 +55,8 @@ add_executable(FMI_OOP_Semester_Proj
         src/Entity/Item/ItemFactory.hpp
         src/Map/MapFactory.cpp
         src/Map/MapFactory.hpp
+        src/Entity/Item/ItemType.cpp
+        src/Game/Combat/CoinToss.cpp
 )
 
 add_executable(FMI_OOP_Semester_Proj_Level_Editor
@@ -71,3 +74,17 @@ target_link_libraries(FMI_OOP_Semester_Proj PRIVATE nlohmann_json::nlohmann_json
 
 target_link_libraries(FMI_OOP_Semester_Proj_Level_Editor PRIVATE nlohmann_json::nlohmann_json)
 target_link_libraries(FMI_OOP_Semester_Proj_Level_Editor PRIVATE boost::boost)
+
+if (DOXYGEN_FOUND)
+    message(STATUS "Doxygen found. You can run 'make doc_doxygen' to generate documentation.")
+
+    set(DOXYGEN_IN ${CMAKE_SOURCE_DIR}/Doxyfile)
+
+    add_custom_target(doc_doxygen
+            COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_IN}
+            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+            COMMENT "Generating API documentation with Doxygen"
+            VERBATIM)
+else ()
+    message(STATUS "Doxygen not found. Documentation won't be generated.")
+endif ()
