[REFACTOR] Refactor folders and add try-catches in GameManager.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,16 +11,16 @@ add_executable(FMI_OOP_Semester_Proj
         src/main.cpp
         src/Util/Util.hpp
         src/Util/Util.cpp
-        src/Entity/NPEntity.hpp
-        src/Entity/Creature/Hero/Hero.hpp
-        src/Entity/Creature/Monster/Monster.cpp
-        src/Entity/Creature/Monster/Monster.hpp
-        src/Entity/Item/Item.cpp
-        src/Entity/Item/Item.hpp
-        src/Entity/Wall/Wall.cpp
-        src/Entity/Wall/Wall.hpp
-        src/Entity/Creature/Stats.cpp
-        src/Entity/Creature/Stats.hpp
+        src/NPEntity/NPEntity.hpp
+        src/Hero/Hero.hpp
+        src/NPEntity/Monster/Monster.cpp
+        src/NPEntity/Monster/Monster.hpp
+        src/NPEntity/Item/Item.cpp
+        src/NPEntity/Item/Item.hpp
+        src/NPEntity/Wall/Wall.cpp
+        src/NPEntity/Wall/Wall.hpp
+        src/Stats/Stats.cpp
+        src/Stats/Stats.hpp
         src/Game/GameManager.cpp
         src/Game/GameManager.hpp
         src/Game/Combat/CombatManager.cpp
@@ -29,33 +29,33 @@ add_executable(FMI_OOP_Semester_Proj
         src/Map/Map.hpp
         src/Map/Cell/Cell.cpp
         src/Map/Cell/Cell.hpp
-        src/Entity/NPEntity.cpp
+        src/NPEntity/NPEntity.cpp
         src/Game/Controls/ControlsManager.cpp
         src/Game/Controls/ControlsManager.hpp
         src/Game/Interactions/InteractionsManager.cpp
         src/Game/Interactions/InteractionsManager.hpp
-        src/Entity/Creature/Hero/Race/HeroRace.hpp
-        src/Entity/Creature/Hero/Class/HeroClass.hpp
+        src/Hero/Race/HeroRace.hpp
+        src/Hero/Class/HeroClass.hpp
         src/Game/Combat/AttackType.hpp
-        src/Entity/Item/ItemType.hpp
+        src/NPEntity/Item/ItemType.hpp
         src/Game/CharacterCreator/CharacterCreator.cpp
         src/Game/CharacterCreator/CharacterCreator.hpp
-        src/Entity/Creature/Hero/Hero.cpp
+        src/Hero/Hero.cpp
         src/Map/LevelLoader/LevelLoader.cpp
         src/Map/LevelLoader/LevelLoader.hpp
         src/Map/LoadedLevel.hpp
         src/Game/Save/SaveManager.cpp
         src/Game/Save/SaveManager.hpp
         src/Game/GameContext.hpp
-        src/Entity/Creature/Hero/HeroFactory.cpp
-        src/Entity/Creature/Hero/HeroFactory.hpp
-        src/Entity/Creature/Monster/MonsterFactory.cpp
-        src/Entity/Creature/Monster/MonsterFactory.hpp
-        src/Entity/Item/ItemFactory.cpp
-        src/Entity/Item/ItemFactory.hpp
+        src/Hero/HeroFactory.cpp
+        src/Hero/HeroFactory.hpp
+        src/NPEntity/Monster/MonsterFactory.cpp
+        src/NPEntity/Monster/MonsterFactory.hpp
+        src/NPEntity/Item/ItemFactory.cpp
+        src/NPEntity/Item/ItemFactory.hpp
         src/Map/MapFactory.cpp
         src/Map/MapFactory.hpp
-        src/Entity/Item/ItemType.cpp
+        src/NPEntity/Item/ItemType.cpp
         src/Game/Combat/CoinToss.cpp
 )
 
