--- a/conandata.yml
+++ b/conandata.yml
@@ -2,5 +2,6 @@
 # To keep your changes, remove these comment lines, but the plugin won't be able to modify your requirements
 
 requirements:
+  - "doctest/2.4.11"
   - "boost/1.87.0"
   - "nlohmann_json/3.12.0"
